Common raw product view page rebuild

--- a/KGERP/Views/Configuration/CommonRawProduct.cshtml
+++ b/KGERP/Views/Configuration/CommonRawProduct.cshtml
@@ -3,10 +3,8 @@
 @using KG.Core.Services
 @{
 
-    ViewData["Title"] = "New Material Item";
+    ViewData["Title"] = "Requisition Materials";
     Layout = "~/Views/Shared/_Layout.cshtml";
-
-
 }
 
 <style type="text/css">
@@ -15,15 +13,17 @@
         max-width: 100%;
     }
 </style>
+
 <section class="content-header">
     <h1>
-        New Material Item
+        Requisition Materials
     </h1>
     <ol class="breadcrumb">
         <li><a href="~/Home/Index"><i class="fa fa-dashboard"></i>Dashboard</a></li>
-        <li class="active">New Material Item</li>
+        <li class="active">Requisition Materials</li>
     </ol>
 </section>
+
 <section class="content">
     <div class="row">
         <div class="col-md-12">
@@ -37,66 +37,57 @@
                         <!-- /.box-header -->
                         <div class="box-body">
                             @Html.HiddenFor(model => model.Image, new { Value = "", id = "txtPhoto" })
-
                             @Html.HiddenFor(model => model.ID, new { id = "productId" })
                             @Html.HiddenFor(model => model.ActionId, new { id = "ActionId" })
                             @Html.HiddenFor(model => model.CompanyFK, new { id = "CompanyFK" })
-                            <input type="hidden" id="txtCategoryName" name="CategoryName" value="Requisition Item" />
-                            <input type="hidden" id="ddlCommonProductCategoryFk" name="Common_ProductCategoryFk" value="1" />
-                            <input type="hidden" id="ddlCommonProductSubCategoryFk" name="Common_ProductSubCategoryFk" value="1" />
-                            <input type="hidden" id="txtMRPPrice" name="MRPPrice" value="0.0" />
-                            <input type="hidden" id="txtTPPrice" name="TPPrice" value="0.0" />
 
                             <div class="row">
 
-                                <div class="col-md-6">
-                                    <div class="col-md-6">
-                                        <div class="form-group">
-                                            <label for="message-text" class="col-form-label">Item/Material Name :</label>
-                                            @Html.TextBoxFor(model => model.Name, new { id = "txtProductName", @class = "form-control", @placeholder = "Product Name", required = "required" })
-                                            @Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })
-                                        </div>
-                                    </div>
-
-                                    <div class="col-md-6">
-                                        <div class="form-group">
-                                            <label for="message-text" class="col-form-label">Select Unit:</label>
-                                            @{var orderedUnitList = Model.UnitList.OrderBy(order => order.Text).ToList();}
-                                            @Html.DropDownListFor(model => model.Common_UnitFk, new SelectList(orderedUnitList, "Value", "Text"), "===Select Unit===", new { id = "ddlCommonUnitFk", @class = "form-control", required = "required" })
-                                        </div>
+                                <div class="col-md-3">
+                                    <div class="form-group">
+                                        <label for="message-text" class="col-form-label">Select Requisition :</label>
+                                        @Html.DropDownListFor(model => model.Common_ProductSubCategoryFk, Model.ProductSubCategoryList as SelectList, "===Select Subcategory===", new { id = "ddlCommonProductSubCategoryFk", @class = "form-control", required = "required" })
+                                        @Html.ValidationMessageFor(model => model.Common_ProductSubCategoryFk, "", new { @class = "text-danger" })
                                     </div>
                                 </div>
 
-                                <div class="col-md-6" style="margin-top: 25px !important">
+                                <div class="col-md-3">
                                     <div class="form-group">
-                                        <div class="col-md-6">
+                                        <label for="message-text" class="col-form-label">Select Sub Requisition :</label>
+                                        @Html.DropDownListFor(model => model.Common_ProductSubCategoryFk, Model.ProductSubCategoryList as SelectList, "===Select Subcategory===", new { id = "ddlCommonProductSubCategoryFk", @class = "form-control", required = "required" })
+                                        @Html.ValidationMessageFor(model => model.Common_ProductSubCategoryFk, "", new { @class = "text-danger" })
+                                    </div>
+                                </div>
+
+                                <div class="col-md-3">
+                                    <div class="form-group">
+                                        <label for="message-text" class="col-form-label">Material Name :</label>
+                                        @Html.TextBoxFor(model => model.Name, new { id = "txtProductName", @class = "form-control", @placeholder = "Materials Name", required = "required" })
+                                        @Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })
+                                    </div>
+                                </div>
+
+                                <div class="col-md-3">
+                                    <div class="form-group">
+                                        <label for="message-text" class="col-form-label">Unit Name :</label>
+                                        @Html.DropDownListFor(model => model.Common_UnitFk, Model.UnitList as SelectList, "===Select Unit===", new { id = "ddlCommonUnitFk", @class = "form-control", required = "required" })
+                                        @Html.ValidationMessageFor(model => model.Common_UnitFk, "", new { @class = "text-danger" })
+                                    </div>
+                                </div>
+
+                                <div class="col-md-12">
+                                    <div class="form-group">
+                                        <div class="col-md-4"></div>
+                                        <div class="col-md-4">
                                             <button type="button" onclick="resetForm()" class="btn btn-secondary btn-block" data-dismiss="modal">Reset</button>
                                         </div>
-                                        <div class="col-md-6">
+                                        <div class="col-md-4">
                                             <button type="submit" id="btnSave" class="btn btn-primary btn-block"><i class='fa fa-plus'></i> Add</button>
                                         </div>
                                     </div>
                                 </div>
 
                             </div>
-                            @*<div class="row">
-                                    <div class="col-md-4"></div>
-
-                                    <div class="col-md-5">
-                                        <div class="form-group">
-                                            <label for="message-text" class="col-form-label">Origin Name (Variety):</label>
-                                            @Html.TextBoxFor(model => model.ShortName, new { id = "txtShortName", @class = "form-control", @placeholder = "Origin Name (Variety)" })
-                                            @Html.ValidationMessageFor(model => model.ShortName, "", new { @class = "text-danger" })
-                                        </div>
-                                    </div>
-                                    <div class="col-md-3">
-                                        <div class="form-group">
-                                            <label for="message-text" class="col-form-label">Unit:</label>
-                                            @Html.DropDownListFor(model => model.Common_UnitFk, Model.UnitList as SelectList, "---Select Unit---", new { id = "ddlCommonUnitFk", @class = "form-control", required = "required" })
-                                            @Html.ValidationMessageFor(model => model.Common_UnitFk, "", new { @class = "text-danger" })
-                                        </div>
-                                    </div>
-                                </div>*@
                         </div>
                         <div class="box-footer">
                         </div>
@@ -111,6 +102,8 @@
                                             <thead>
                                                 <tr>
                                                     <th>SL</th>
+                                                    <th>Requisition Type</th>
+                                                    <th>Sub Requisition Type</th>
                                                     <th>Material Name</th>
                                                     <th>Unit Name</th>
                                                     <th>Action</th>
@@ -122,11 +115,16 @@
                                             <tbody>
                                                 @if (Model.DataList != null)
                                                 {
-                                                    foreach (var item in Model.DataList.OrderBy(x => x.Name ))
+                                                    foreach (var item in Model.DataList)
                                                     {
-
                                                         <tr>
                                                             <td>@(++sl)</td>
+                                                            <td>
+                                                                @item.CategoryName
+                                                            </td>
+                                                            <td>
+                                                                @item.SubCategoryName
+                                                            </td>
                                                             <td>
                                                                 @item.Name
                                                             </td>
@@ -139,7 +137,6 @@
                                                                    data-placement="top">
                                                                     <i class="glyphicon glyphicon-trash" aria-hidden="true"></i>
                                                                 </a>
-                                                                @*<a href="~/Warehouse/WareHouseRawProductInventoryDetails?companyId=@Model.CompanyFK&productId=@item.ID">Ledger</a>*@
                                                             </td>
                                                         </tr>
                                                     }
@@ -198,69 +195,9 @@
 @section scripts {
 
     <script type="text/javascript">
-
-
         $(document).ready(function () {
-            $('#txtCategoryName').focus();
-
-             $('.formValidator').bootstrapValidator();
-
-            });
-
-
-             $("#txtCategoryName").autocomplete({
-                source: function (request, response) {
-
-                    $.ajax({
-                        url:"@Url.Action("AutoCompleteProductCategoryGet", "Configuration")",
-                        //data: "{ 'prefix': '" + request.term + "'}",
-                        data: { companyId: "@Model.CompanyFK", prefix: request.term, productType : "R" },
-                        dataType: "json",
-                        type: "get",
-                        cache: true,
-                        contentType: "application/json; charset=utf-8",
-                        success: function (data) {
-                            response($.map(data, function (item) {
-                                return item;
-                            }))
-                        },
-                        error: function (response) {
-                            //alert(response.responseText);
-                        },
-                        failure: function (response) {
-                            //alert(response.responseText);
-                        }
-                    });
-                },
-
-                select: function (e, i) {
-                    $("#ddlCommonProductCategoryFk").val(i.item.val);
-                     $.ajax({
-                type: "GET",
-                url: "@Url.Action("CommonProductSubCategoryGet","Configuration")",
-                datatype: "Json",
-                         data: { companyId: "@Model.CompanyFK", categoryId: i.item.val},
-                    success: function (data) {
-                    var items = "";
-                        if (data) {
-                            $("#ddlCommonProductSubCategoryFk").empty();
-                            $("#ddlCommonProductSubCategoryFk").append("<option value=''>==Select Subcategory==</option>");
-                            $(data).each(function (index, item) {
-                                $("#ddlCommonProductSubCategoryFk").append("<option value='" + item.Value + "'>" + item.Text + "</option>");
-                            });
-                        }
-                    }
-                });
-
-                },
-                minLength: 1,
-                cache: true
-
-            }).focus(function () {
-                $(this).autocomplete("search");
-            });
-
-
+            $('.formValidator').bootstrapValidator();
+        });
 
         function makeEditble(id) {
             if (id !== null) {
@@ -305,12 +242,6 @@
             }
         }
 
-        function resetForm() {
-            $('#commonProductFormId')[0].reset();
-            $('#btnSave').html("<i class='fa fa-edit'></i>&nbsp;Add");
-
-        }
-
         function makeDeletable(id) {
             if (id !== null) {
                 $('#productIdDelete').val(id);
@@ -320,6 +251,11 @@
             }
         }
 
+        function resetForm() {
+            $('#commonProductFormId')[0].reset();
+            $('#btnSave').html("<i class='fa fa-edit'></i>&nbsp;Add");
+
+        }
+
     </script>
 }
-
